--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Ted",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.0",
@@ -51,11 +53,6 @@
     "typescript": "^4.0.5",
     "webpack": "4.44.2",
     "webpack-cli": "^4.1.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
   },
   "babel": {
     "presets": [
