--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,11 +44,15 @@
     "no-console": "off",
     "no-debugger": 0,
     "@typescript-eslint/ban-types": 1,
+    "@typescript-eslint/no-empty-function": 0,
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/no-unused-vars": 0,
     "@typescript-eslint/no-non-null-assertion": 0,
     "@typescript-eslint/explicit-module-boundary-types": 0,
+    "@typescript-eslint/no-empty-interface": 1,
+    "@typescript-eslint/no-inferrable-types": 0,
+    "no-empty": 0,
     "no-unused-vars": 0,
     "no-unused-vars-experimental": 0
   }
-}
+}``
