--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ted-bp",
+  "name": "spotify-3",
   "version": "0.0.1",
-  "description": "Boilerplate for home projects",
+  "description": "Spotify using electron",
   "main": "main.js",
   "scripts": {
     "build": "node node_modules/webpack/bin/webpack --config ./webpack.config.js",
@@ -12,6 +12,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.0",
@@ -20,14 +21,16 @@
     "react-refresh": "^0.8.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "superagent": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
     "@svgr/webpack": "5.4.0",
-    "@types/lodash": "^4.14.162",
     "@types/material-ui": "^0.21.8",
+    "@types/lodash": "^4.14.165",
     "@types/node": "^12.19.2",
+    "@types/superagent": "^4.1.11",
     "@types/react": "^16.9.54",
     "@types/react-dom": "^16.9.9",
     "@types/react-redux": "^7.1.9",
