--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ted-bp",
+  "name": "bs-ar-js",
   "version": "0.0.1",
-  "description": "Boilerplate for home projects",
+  "description": "BrightSign Autorun",
   "main": "main.js",
   "scripts": {
     "build": "node node_modules/webpack/bin/webpack --config ./webpack.config.js",
@@ -10,27 +10,48 @@
   "author": "Ted",
   "license": "ISC",
   "dependencies": {
+    "@brightsign/ba-context-model": "1.2.1",
+    "@brightsign/bsnconnector": "1.3.12-alpha-4",
+    "@brightsign/bs-content-manager": "1.2.12-alpha-2",
+    "@brightsign/bs-task-manager": "1.0.6",
+    "@brightsign/bs-device-artifacts": "1.1.13-alpha-7",
+    "@brightsign/bs-playlist-dm": "1.0.5",
+    "@brightsign/bscore": "1.3.7-alpha-7",
+    "@brightsign/bsdatamodel": "1.2.3-alpha-3",
+    "@brightsign/fsconnector": "1.1.8",
+    "@brightsign/ba-schedule": "1.0.2",
+    "@brightsign/bs-autoplay-generator": "1.1.5",
+    "@brightsign/bs-data-feed-dm": "1.0.3",
+    "@brightsign/bs-tagged-playlist-dm": "1.0.5",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
-    "react": "^17.0.1",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.0",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-refresh": "^0.8.3",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "superagent": "^6.1.0",
+    "junk": "^2.1.0",
+    "moment": "^2.17.1",
+    "moment-range": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
     "@svgr/webpack": "5.4.0",
-    "@types/lodash": "^4.14.162",
+    "@types/image-size": "0.0.29",
+    "@types/lodash": "^4.14.182",
     "@types/material-ui": "^0.21.8",
-    "@types/node": "^12.19.2",
-    "@types/react": "^16.9.54",
-    "@types/react-dom": "^16.9.9",
-    "@types/react-redux": "^7.1.9",
+    "@types/node": "^16.11.45",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24",
+    "@types/superagent": "^4.1.11",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "babel-eslint": "^10.1.0",
@@ -38,8 +59,10 @@
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "electron": "^10.1.5",
-    "electron-devtools-installer": "^3.1.1",
+    "dotenv": "8.2.0",
+    "dotenv-expand": "5.1.0",
+    "electron": "12.0.11",
+    "electron-devtools-installer": "3.2.0",
     "eslint": "^7.11.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
@@ -48,11 +71,12 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^2.1.0",
+    "image-size": "^0.6.3",
     "source-map-loader": "^2.0.0",
     "ts-loader": "^8.0.7",
-    "typescript": "^4.0.5",
-    "webpack": "4.44.2",
-    "webpack-cli": "^4.1.0"
+    "typescript": "^4.7.4",
+    "webpack": "5.64.4",
+    "webpack-cli": "4.9.1"
   },
   "babel": {
     "presets": [
