--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "electron": "^10.1.5",
-    "electron-devtools-installer": "^3.1.1",
+    "electron": "12.0.11",
+    "electron-devtools-installer": "3.2.0",
     "eslint": "^7.11.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
