--- a/package.json
+++ b/package.json
@@ -12,28 +12,28 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
-    "lodash": "^4.17.20",
-    "react": "^17.0.1",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.0",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-refresh": "^0.8.3",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "superagent": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
     "@svgr/webpack": "5.4.0",
+    "@types/lodash": "^4.14.182",
     "@types/material-ui": "^0.21.8",
-    "@types/lodash": "^4.14.165",
-    "@types/node": "^12.19.2",
+    "@types/node": "^16.11.45",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24",
     "@types/superagent": "^4.1.11",
-    "@types/react": "^16.9.54",
-    "@types/react-dom": "^16.9.9",
-    "@types/react-redux": "^7.1.9",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "babel-eslint": "^10.1.0",
@@ -53,9 +53,9 @@
     "eslint-webpack-plugin": "^2.1.0",
     "source-map-loader": "^2.0.0",
     "ts-loader": "^8.0.7",
-    "typescript": "^4.0.5",
-    "webpack": "4.44.2",
-    "webpack-cli": "^4.1.0"
+    "typescript": "^4.7.4",
+    "webpack": "5.64.4",
+    "webpack-cli": "4.9.1"
   },
   "babel": {
     "presets": [
