--- a/package.json
+++ b/package.json
@@ -10,6 +10,19 @@
   "author": "Ted",
   "license": "ISC",
   "dependencies": {
+    "@brightsign/ba-context-model": "1.2.1",
+    "@brightsign/bsnconnector": "1.3.12-alpha-4",
+    "@brightsign/bs-content-manager": "1.2.12-alpha-2",
+    "@brightsign/bs-task-manager": "1.0.6",
+    "@brightsign/bs-device-artifacts": "1.1.13-alpha-7",
+    "@brightsign/bs-playlist-dm": "1.0.5",
+    "@brightsign/bscore": "1.3.7-alpha-7",
+    "@brightsign/bsdatamodel": "1.2.3-alpha-3",
+    "@brightsign/fsconnector": "1.1.8",
+    "@brightsign/ba-schedule": "1.0.2",
+    "@brightsign/bs-autoplay-generator": "1.1.5",
+    "@brightsign/bs-data-feed-dm": "1.0.3",
+    "@brightsign/bs-tagged-playlist-dm": "1.0.5",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "lodash": "^4.17.21",
