--- a/package.json
+++ b/package.json
@@ -35,11 +35,15 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "superagent": "^6.1.0"
+    "superagent": "^6.1.0",
+    "junk": "^2.1.0",
+    "moment": "^2.17.1",
+    "moment-range": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
     "@svgr/webpack": "5.4.0",
+    "@types/image-size": "0.0.29",
     "@types/lodash": "^4.14.182",
     "@types/material-ui": "^0.21.8",
     "@types/node": "^16.11.45",
@@ -47,6 +51,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
     "@types/superagent": "^4.1.11",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "babel-eslint": "^10.1.0",
@@ -54,6 +59,8 @@
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "dotenv": "8.2.0",
+    "dotenv-expand": "5.1.0",
     "electron": "12.0.11",
     "electron-devtools-installer": "3.2.0",
     "eslint": "^7.11.0",
@@ -64,6 +71,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^2.1.0",
+    "image-size": "^0.6.3",
     "source-map-loader": "^2.0.0",
     "ts-loader": "^8.0.7",
     "typescript": "^4.7.4",
