--- a/package.json
+++ b/package.json
@@ -5,40 +5,44 @@
   "main": "main.js",
   "scripts": {
     "build": "node node_modules/webpack/bin/webpack --config ./webpack.config.js",
-    "buildW": "node node_modules/webpack/bin/webpack --config ./webpack.config.js --watch"
+    "buildW": "node node_modules/webpack/bin/webpack --config ./webpack.config.js --watch",
+    "build-electron": "cross-env NODE_ENV=develop PLATFORM=electron node scripts/build.js",
+    "build-brightsign": "cross-env NODE_ENV=develop PLATFORM=brightsign node scripts/build.js",
+    "start-electron": "cross-env NODE_ENV=develop PLATFORM=electron node scripts/start.js",
+    "build-dev-electron-main": "webpack --config webpack.config.js"
   },
   "author": "Ted",
   "license": "ISC",
   "dependencies": {
     "@brightsign/ba-context-model": "1.2.1",
-    "@brightsign/bsnconnector": "1.3.12-alpha-4",
-    "@brightsign/bs-content-manager": "1.2.12-alpha-2",
-    "@brightsign/bs-task-manager": "1.0.6",
-    "@brightsign/bs-device-artifacts": "1.1.13-alpha-7",
-    "@brightsign/bs-playlist-dm": "1.0.5",
-    "@brightsign/bscore": "1.3.7-alpha-7",
-    "@brightsign/bsdatamodel": "1.2.3-alpha-3",
-    "@brightsign/fsconnector": "1.1.8",
     "@brightsign/ba-schedule": "1.0.2",
     "@brightsign/bs-autoplay-generator": "1.1.5",
+    "@brightsign/bs-content-manager": "1.2.12-alpha-2",
     "@brightsign/bs-data-feed-dm": "1.0.3",
+    "@brightsign/bs-device-artifacts": "1.1.13-alpha-7",
+    "@brightsign/bs-playlist-dm": "1.0.5",
     "@brightsign/bs-tagged-playlist-dm": "1.0.5",
+    "@brightsign/bs-task-manager": "1.0.6",
+    "@brightsign/bscore": "1.3.7-alpha-7",
+    "@brightsign/bsdatamodel": "1.2.3-alpha-3",
+    "@brightsign/bsnconnector": "1.3.12-alpha-4",
+    "@brightsign/fsconnector": "1.1.8",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "junk": "^2.1.0",
     "lodash": "^4.17.21",
+    "moment": "^2.17.1",
+    "moment-range": "^3.0.3",
     "react": "^18.2.0",
     "react-app-polyfill": "^2.0.0",
-    "react-dev-utils": "^11.0.0",
+    "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-refresh": "^0.8.3",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "superagent": "^6.1.0",
-    "junk": "^2.1.0",
-    "moment": "^2.17.1",
-    "moment-range": "^3.0.3"
+    "superagent": "^6.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
@@ -52,35 +56,26 @@
     "@types/react-redux": "^7.1.24",
     "@types/superagent": "^4.1.11",
     "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "8.1.0",
-    "babel-plugin-named-asset-import": "^0.3.7",
-    "babel-preset-react-app": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "chalk": "^1.1.3",
+    "cross-spawn": "^7.0.3",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "electron": "12.0.11",
     "electron-devtools-installer": "3.2.0",
-    "eslint": "^7.11.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-webpack-plugin": "^2.1.0",
+    "eslint": "^8.25.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-webpack-plugin": "^3.2.0",
     "image-size": "^0.6.3",
     "source-map-loader": "^2.0.0",
     "ts-loader": "^8.0.7",
     "typescript": "^4.7.4",
     "webpack": "5.64.4",
     "webpack-cli": "4.9.1"
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
   }
 }
