--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "main.js",
   "scripts": {
     "build": "node node_modules/webpack/bin/webpack --config ./webpack.config.js",
-    "buildW": "node node_modules/webpack/bin/webpack --config ./webpack.config.js --watch"
+    "buildW": "node node_modules/webpack/bin/webpack --config ./webpack.config.js --watch",
+    "build-electron": "cross-env NODE_ENV=develop PLATFORM=electron node scripts/build.js",
+    "build-standalone": "cross-env PLATFORM=standalone node scripts/build.js"
   },
   "author": "Ted",
   "license": "ISC",
@@ -55,6 +57,7 @@
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "chalk": "^1.1.3",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "electron": "12.0.11",
