--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "node node_modules/webpack/bin/webpack --config ./webpack.config.js",
     "buildW": "node node_modules/webpack/bin/webpack --config ./webpack.config.js --watch",
     "build-electron": "cross-env NODE_ENV=develop PLATFORM=electron node scripts/build.js",
-    "build-brightsign": "cross-env NODE_ENV=develop PLATFORM=brightsign node scripts/build.js"
+    "build-brightsign": "cross-env NODE_ENV=develop PLATFORM=brightsign node scripts/build.js",
+    "start-electron": "cross-env NODE_ENV=develop PLATFORM=electron node scripts/start.js"
   },
   "author": "Ted",
   "license": "ISC",
@@ -58,6 +59,7 @@
     "@typescript-eslint/parser": "^5.40.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "chalk": "^1.1.3",
+    "cross-spawn": "^7.0.3",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "electron": "12.0.11",
